# irssi-ping

./: .gitignore  COPYING  README.md
irssi-local/: CMakeLists.txt  Makefile
irssi-local/src/: Main.cpp  main.cpp
irssi-remote/: CMakeLists.txt  Makefile
irssi-remote/src/: Main.cpp  main.cpp
